istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lionrocket
  labels:
    istio-injection: enabled  # Enable automatic sidecar injection
