istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: lionrocket
spec:
  mtls:
    mode: STRICT  # Enforce mTLS for all services in the namespace
